@@ -1,15 +1,15 @@
 Package:	supclust
-Title:		Supervised Clustering of Predictor Variables such as Genes
-Version:	1.0-7
-Date:		2011-11-28
+Title:		Supervised Clustering of Predictor Variables Such as Genes
+Version:	1.1-0
+Date:		2020-10-15
 Description:	Methodology for supervised grouping aka "clustering" of
-   potentially many predictor variables, such as genes etc.
-Depends: R (>= 2.5.0)
-Imports: rpart, class
+   potentially many predictor variables, such as genes etc, implementing
+   algorithms 'PELORA' and 'WILMA'.
+Imports: graphics, stats, rpart, class
 Author: Marcel Dettling <marcel.dettling@zhaw.ch> and Martin Maechler
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
-URL: http://www.stat.math.ethz.ch/~dettling/
+URL: https://github.com/mmaechler/supclust
 Encoding: UTF-8
-License: GPL-2
+License: GPL-3
 
 
